=Release Notes=

==v1.1==

* BUG : [#3] - Task repeated in report for tasks with multiple keywords when keywords displayed in report
* BUG : [#5] - deadline (or any date) range matches did not work, e.g. deadline=2008-12-01:2008-12-31
* BUG : [#6] - bugzilla query link not generated correctly for id matches, e.g. {{#bugzilla:status=*|id=1,2,3}}

==v1.0 - 12th February 2009==

* Style class for severity set for the the tr element (row element) containing the bug details, so that (if you want) you can style based on severity.  Style classes used are the exactly the same name as the severity value, e.g. "enhancement", "normal", "major", etc
* Support for parameter "zeroasblank=false" to display numbers as "0" if it is actually 0.  The default setting is to hide 0s
* You can now set default parameters in the $wgBugzillaReports array defined in the LocalSettings.php for the whole wiki.  This is great if you don't like the defaults out-of-the-box and you want to override, e.g. 'default'       => "debug=1|zeroasblank=false|lastcomment=1".  Note that if the parameter is set in the function call (i.e. on the wiki page) then this will override the default setting in the LocalSettings.php
* Slight performance increase by switching to explode instead of split where appropriate